--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,13 @@ name: CI/CD Pipeline for Next.js App
 on:
   push:
     branches:
-      - main  # Trigger the pipeline on pushes to the main branch
+      - main
   pull_request:
     branches:
-      - main  # Trigger the pipeline on pull requests to the main branch
+      - main
 
 jobs:
-  build-and-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,25 +19,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18  # Use Node.js 18
-
-      - name: Install dependencies
-        run: npm install
-
-    #   - name: Run tests
-    #     run: npm test  # Replace with your test command if applicable
-
-      - name: Build the application
-        run: npm run build
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build-and-test  # Ensure the build-and-test job succeeds before deploying
-    if: github.ref == 'refs/heads/main'  # Only deploy on the main branch
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+          node-version: 18
+          cache: 'npm'
 
       - name: Deploy to Ubuntu server
         uses: appleboy/ssh-action@master
@@ -46,18 +29,16 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            # Navigate to the deployment directory
             cd ${{ secrets.DEPLOY_PATH }}
 
-            # Pull the latest changes from the repository
+            # Pull the latest changes
             git fetch --all
             git reset --hard origin/main
 
-            # Install dependencies
-            npm install
+            # Build and start Docker containers
+            docker-compose down
+            docker-compose build --no-cache
+            docker-compose up -d
 
-            # Build the application
-            npm run build
-
-            # Restart the application (adjust this based on your setup)
-            pm2 restart stn_admin || pm2 start npm --name "stn_admin" -- run start
+            # Clean up old images
+            docker image prune -f
