--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     build: .
     ports:
       - "4000:3000"
-    volumes:
-      - .:/app
+    environment:
+      - NODE_ENV=production
     restart: always
