--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,11 @@ jobs:
           node-version: 18
           cache: 'npm'
 
+      - name: Check SSH connection
+        run: |
+          echo "Testing SSH connection to ${{ secrets.SERVER_IP }}"
+          nc -zv ${{ secrets.SERVER_IP }} 22
+
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
@@ -30,7 +35,11 @@ jobs:
           if_key_exists: replace
 
       - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          touch ~/.ssh/known_hosts
+          ssh-keyscan -H -T 60 ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts 2>/dev/null
+          cat ~/.ssh/known_hosts
 
       - name: Deploy to Ubuntu server
         uses: appleboy/ssh-action@master
