--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,17 @@ jobs:
           node-version: 18
           cache: 'npm'
 
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build the application
+        run: npm run build
+
+      - name: Debug - Display SSH Key
+        run: |
+          echo "SSH Key:"
+          echo "${{ secrets.SERVER_SSH_KEY }}"
+
       - name: Deploy to Ubuntu server
         uses: appleboy/ssh-action@master
         with:
