--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.66.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "axios": "^1.7.9",
     "chart.js": "4.2.1",
     "next": "13.4.8",
     "primeflex": "^3.3.1",
@@ -21,7 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sakai-react": "file:",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "eslint": "8.43.0",
